Fixed an issue that caused mobile versions of the site to have horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /*Webpage Colors*/
 :root {
   --gray-background: #152424;
@@ -76,6 +81,9 @@
     flex-direction: row;
     margin: 2vh 3vw 1vh 3vw;
     color: var(--light-green);
+    width: 100%;
+    margin: 0;
+    box-sizing: border-box;
   }
 
   #navbar img {
@@ -289,7 +297,7 @@
     flex-direction: column;
     position: relative;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     min-height: 75%;
     max-height: auto;
     margin-left: 0;
@@ -1032,8 +1040,6 @@
   }
 
   html body {
-    margin: 0;
-    padding: 0;
     position: relative;
     height: 100%;
   }
@@ -1085,8 +1091,6 @@
   }
 
   html body {
-    margin: 0;
-    padding: 0;
     position: relative;
     height: 100%;
   }
